filter out Prerender errors in exceptionHandler.js fix incorrect logo display on non-standard themes on FireFox

--- a/yo/app/plugins/sports/heroesofthestorm/hots.css
+++ b/yo/app/plugins/sports/heroesofthestorm/hots.css
@@ -185,9 +185,8 @@
     border: 1px solid rgba(255,255,255,.15);
 }
 
-.heroesofthestorm .brand img {
-    content:url('images/logo.png');
-    width: 6em;
+.heroesofthestorm .brand:before {
+    content:url('images/logo_small.png');
 }
 
 .heroesofthestorm .brand span {
